# molt

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHECKPOINT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_devirt_defaults_guard.md  GEMINI.md  GEMINI_PROMPT_MoltCompiler.txt  LICENSE  MANIFESTO.md  Makefile.pgo  OPTIMIZATIONS_PLAN.md  PRIMARY_HANDOFF.md  README.md  README_GPU.md  ROADMAP.md  ROADMAP_90_DAYS.md  SESSION_CHANGES.md  SUPPORTED.md  SUPPORT_TEAM.md  WORKFLOW.md  attr_patch.patch  attr_store_ic.patch  bootstrap_molt.sh  deny.toml  fix_backend.sh  fix_set_attr.patch  fix_unwraps.py  fix_wasm_store.sh  jeff-dean-mode.skill  main_stub.c  manifest.json  molt.capabilities.toml  onnxruntime_profile__2026-04-22_02-57-07.json  optimization-planner.skill  (+36 more)
crates/molt-rs/: Cargo.toml
crates/molt-rs/src/: lib.rs
demo/: README.md  pyproject.toml
demo/django_app/: manage.py
demo/django_app/demoapp/: asgi.py  db_seed.py  settings.py  urls.py  views.py  wsgi.py
demo/molt_worker_app/: molt_exports.json  pyproject.toml
demo/molt_worker_app/app/: entrypoints.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_ir_parse.rs  fuzz_ir_passes.rs  fuzz_ir_validate.rs  fuzz_nan_boxing.rs  fuzz_wasm_compile.rs
runtime/: Cargo.toml  KANI_CI.md  crate_graph.toml  wasm_poll_callables.inc  wasm_runtime_callables.inc  wasm_table_layout.inc
runtime/build_support/: unicode_tables.rs  wasi_sysroot.rs
runtime/molt-backend/: .gitignore  Cargo.toml  output.luau
runtime/molt-backend-luau/: Cargo.toml
runtime/molt-backend-luau/src/: lib.rs  luau.rs  luau_json_prelude.luau  luau_lower.rs
runtime/molt-backend-mlir/: Cargo.toml
runtime/molt-backend-mlir/src/: lib.rs  lower.rs  optimize.rs  pipeline.rs  tir_to_mlir.rs
runtime/molt-backend-native/: Cargo.toml
runtime/molt-backend-native/src/: app_resolver_abi.rs  lib.rs  runtime_import_abi.rs
runtime/molt-backend-rust/: Cargo.toml
runtime/molt-backend-rust/src/: lib.rs  rust.rs
runtime/molt-backend-rust/tests/: rust_transpiler_preview.rs
runtime/molt-backend-wasm/: Cargo.toml
runtime/molt-backend-wasm/src/: lib.rs  lower_to_wasm.rs  test_util.rs  wasm.rs  wasm_abi.rs  wasm_abi_generated.rs  wasm_abi_manifest.toml  wasm_binary.rs  wasm_data.rs  wasm_dispatch.rs  wasm_import_tracking.rs  wasm_imports.rs  wasm_lir_fast_output.rs  wasm_options.rs  wasm_plan.rs  wasm_values.rs
runtime/molt-backend/fuzz/: Cargo.toml
runtime/molt-backend/src/: debug_artifacts.rs  egraph_simplify.rs  fact_graph_emit.rs  intrinsic_symbol_overrides.rs  intrinsic_symbols.rs  ir.rs  ir_rewrites.rs  ir_schema.rs  json_boundary.rs  lib.rs  luau.rs  luau_ir.rs  luau_lower.rs  main.rs  native_backend_consts.rs  passes.rs  process_diagnostics.rs  representation_plan.rs  rust.rs  stdlib_module_symbols.rs  wasm.rs  wasm_abi.rs  wasm_abi_generated.rs  wasm_abi_manifest.toml  wasm_binary.rs  wasm_data.rs  wasm_dispatch.rs  wasm_import_tracking.rs  wasm_imports.rs  wasm_plan.rs  wasm_values.rs
runtime/molt-backend/tests/: cbor_round_trip.rs  debug_artifacts.rs  entry_block_param_shadow.rs  gpu_backend_roundtrip.rs  gpu_metal_backend_lane.rs  ir_contract_validation.rs  ir_schema_scaffold.rs  jumpful_malformed_control.rs  lir_loop_and_join_regressions.rs  lir_representation_invariants.rs  lir_scalar_lowering.rs  lir_wasm_repr_regressions.rs  llvm_rpo.rs  loop_continue.rs  loop_try_except_continue.rs  native_batch_worker_spawn.rs  native_extern_linkage.rs  rust_transpiler_preview.rs  tir_roundtrip.rs  wasm_compilation.rs  wasm_data_segments.rs  wasm_fastcall_lowering.rs  wasm_import_filtering.rs  wasm_import_registry.rs  wasm_lir_fast_path_integration.rs  wasm_type_section.rs  webgpu_pipeline_dispatch.rs
runtime/molt-codegen-abi/: Cargo.toml
runtime/molt-codegen-abi/src/: lib.rs
runtime/molt-cpython-abi/: Cargo.toml  build.rs
runtime/molt-cpython-abi/include/: Python.h  abstract.h  compile.h  datetime.h  frameobject.h  pythread.h  traceback.h
runtime/molt-cpython-abi/shims/: pyarg_variadic.c
runtime/molt-cpython-abi/src/: abi_types.rs  bridge.rs  hooks.rs  lib.rs  loader.rs
runtime/molt-cpython-abi/tests/: cext_integration.rs  test_bridge.rs  test_capsule.rs  test_contextvars.rs  test_exceptions.rs  test_hooks.rs  test_mapping.rs  test_modules.rs  test_numbers.rs  test_object_protocol.rs  test_refcount.rs  test_sequences.rs  test_slice.rs  test_strings.rs  test_sys.rs  test_type_operations.rs
runtime/molt-db/: Cargo.toml
runtime/molt-db/src/: async_pool.rs  lib.rs  pool.rs  postgres.rs  sqlite.rs
runtime/molt-embed/: Cargo.toml
runtime/molt-embed/src/: lib.rs
runtime/molt-ffi/: Cargo.toml
runtime/molt-ffi/src/: header.rs  lib.rs
runtime/molt-gpu/: Cargo.toml  op_contract.toml
runtime/molt-harness/: Cargo.toml
runtime/molt-ir/: Cargo.toml
runtime/molt-obj-model/: Cargo.toml  KANI.md
runtime/molt-passes/: Cargo.toml
runtime/molt-python/: Cargo.toml
runtime/molt-runtime/: Cargo.toml  build.rs
runtime/molt-runtime-asyncio/: Cargo.toml
runtime/molt-runtime-collections/: Cargo.toml
runtime/molt-runtime-compression/: Cargo.toml
runtime/molt-runtime-core/: Cargo.toml
runtime/molt-runtime-crypto/: Cargo.toml
runtime/molt-runtime-difflib/: Cargo.toml
runtime/molt-runtime-http/: Cargo.toml
runtime/molt-runtime-ipaddress/: Cargo.toml
runtime/molt-runtime-itertools/: Cargo.toml
runtime/molt-runtime-logging/: Cargo.toml
runtime/molt-runtime-math/: Cargo.toml
runtime/molt-runtime-net/: Cargo.toml
runtime/molt-runtime-path/: Cargo.toml
runtime/molt-runtime-protobuf/: Cargo.toml
runtime/molt-runtime-regex/: Cargo.toml
runtime/molt-runtime-serial/: Cargo.toml
runtime/molt-runtime-stringprep/: Cargo.toml
runtime/molt-runtime-text/: Cargo.toml
runtime/molt-runtime-tk/: Cargo.toml
runtime/molt-runtime-xml/: Cargo.toml
runtime/molt-runtime-zoneinfo/: Cargo.toml
runtime/molt-snapshot/: Cargo.toml
runtime/molt-tier/: Cargo.toml
runtime/molt-tir/: Cargo.toml
runtime/molt-wasm-host/: Cargo.toml
runtime/molt-worker/: Cargo.toml
(+10022 files in other folders)
