[workspace]
members = [
    "runtime/molt-runtime",
    "runtime/molt-runtime-collections",
    "runtime/molt-runtime-itertools",
    "runtime/molt-runtime-crypto",
    "runtime/molt-runtime-compression",
    "runtime/molt-runtime-path",
    "runtime/molt-runtime-tk",
    "runtime/molt-obj-model",
    "runtime/molt-backend",
    "runtime/molt-db",
    "runtime/molt-worker",
    "runtime/molt-wasm-host",
    "runtime/molt-snapshot",
    "runtime/molt-embed",
    "runtime/molt-harness",
    "runtime/molt-runtime-protobuf",
    "runtime/molt-ffi",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
# panic = "unwind" is required for the backend's catch_unwind retry
# mechanism (handles Cranelift optimizer panics gracefully).
# panic = "abort" broke this entirely — catch_unwind was a no-op.
panic = "unwind"
strip = "symbols"
debug = 1

[profile.dev.package.molt-backend]
debug = 0

[profile.dev.package.cranelift-codegen]
debug = 0

[profile.dev.package.cranelift-frontend]
debug = 0

[profile.dev.package.cranelift-module]
debug = 0

[profile.dev.package.cranelift-native]
debug = 0

[profile.dev.package.cranelift-object]
debug = 0

[profile.dev.package.gimli]
debug = 0

[profile.dev.package.object]
debug = 0

[profile.dev.package.molt-runtime]
debug = 0

[profile.dev.package.aws-lc-rs]
debug = 0

[profile.dev.package.aws-lc-sys]
debug = 0

[profile.dev.package.httparse]
debug = 0

[profile.dev.package.libbz2-rs-sys]
debug = 0

[profile.dev.package.rustpython-parser]
debug = 0

[profile.dev.package.rustpython-ast]
debug = 0

[profile.dev.package.rustpython-parser-core]
debug = 0

[profile.dev.package.rustls]
debug = 0

[profile.dev.package.rustls-pemfile]
debug = 0

[profile.dev.package.rustls-webpki]
debug = 0

[profile.dev.package.serde]
debug = 0

[profile.dev.package.serde_core]
debug = 0

[profile.dev.package.serde_json]
debug = 0

[profile.dev.package.simdutf]
debug = 0

[profile.dev.package.thiserror]
debug = 0

[profile.dev.package.tungstenite]
debug = 0

[profile.dev.package.webpki-roots]
debug = 0

[profile.dev.package.zlib-rs]
debug = 0

[profile.dev.package.proc-macro2]
debug = 0

[profile.dev.package.quote]
debug = 0

[profile.dev.package.syn]
debug = 0

[profile.dev.package.unicode_names2]
debug = 0

[profile.dev.package.url]
debug = 0

[profile.dev.package.xz2]
debug = 0

[profile.dev.package.lzma-sys]
debug = 0

[profile.dev.package.zip]
debug = 0

[profile.dev-fast]
inherits = "dev"
debug = 1
codegen-units = 256
lto = "off"

[profile.dev-fast.package.molt-backend]
debug = 0

[profile.dev-fast.package.cranelift-codegen]
debug = 0

[profile.dev-fast.package.cranelift-frontend]
debug = 0

[profile.dev-fast.package.cranelift-module]
debug = 0

[profile.dev-fast.package.cranelift-native]
debug = 0

[profile.dev-fast.package.cranelift-object]
debug = 0

[profile.dev-fast.package.gimli]
debug = 0

[profile.dev-fast.package.object]
debug = 0

[profile.dev-fast.package.molt-runtime]
debug = 0

[profile.dev-fast.package.aws-lc-rs]
debug = 0

[profile.dev-fast.package.aws-lc-sys]
debug = 0

[profile.dev-fast.package.httparse]
debug = 0

[profile.dev-fast.package.libbz2-rs-sys]
debug = 0

[profile.dev-fast.package.rustpython-parser]
debug = 0

[profile.dev-fast.package.rustpython-ast]
debug = 0

[profile.dev-fast.package.rustpython-parser-core]
debug = 0

[profile.dev-fast.package.rustls]
debug = 0

[profile.dev-fast.package.rustls-pemfile]
debug = 0

[profile.dev-fast.package.rustls-webpki]
debug = 0

[profile.dev-fast.package.serde]
debug = 0

[profile.dev-fast.package.serde_core]
debug = 0

[profile.dev-fast.package.serde_json]
debug = 0

[profile.dev-fast.package.simdutf]
debug = 0

[profile.dev-fast.package.thiserror]
debug = 0

[profile.dev-fast.package.tungstenite]
debug = 0

[profile.dev-fast.package.webpki-roots]
debug = 0

[profile.dev-fast.package.zlib-rs]
debug = 0

[profile.dev-fast.package.proc-macro2]
debug = 0

[profile.dev-fast.package.quote]
debug = 0

[profile.dev-fast.package.syn]
debug = 0

[profile.dev-fast.package.unicode_names2]
debug = 0

[profile.dev-fast.package.url]
debug = 0

[profile.dev-fast.package.xz2]
debug = 0

[profile.dev-fast.package.lzma-sys]
debug = 0

[profile.dev-fast.package.zip]
debug = 0

# Fast iteration profile: O2 with more codegen units for faster linking.
# The daemon uses this for quick recompilation during development.
[profile.release-fast]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 8
strip = "symbols"
panic = "unwind"

# Size-optimized release profile for micro stdlib builds.
# Uses opt-level "z" (minimize binary size) with full LTO.
[profile.release-size]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 4
panic = "unwind"
strip = true

# WASM-optimized release profile: full LTO with single codegen unit for
# maximum cross-crate inlining and dead code elimination. Build time
# increases but runtime wasm artifacts are cached and infrequently rebuilt.
[profile.wasm-release]
inherits = "release"
opt-level = "z"  # minimize binary size for Cloudflare Workers 3MB limit
lto = "thin"
codegen-units = 4
panic = "unwind"
strip = true

[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 4
debug = 1

# Optimize runtime crates for SIZE — statically linked into output binaries.
# Runtime packages: opt-level 3 for maximum native performance.
# The WASM/size-optimized builds use profile.wasm-release (opt="z").
# These are the hot-path functions called millions of times — every
# bit of inlining, vectorization, and scheduling matters.
[profile.release.package.molt-runtime]
opt-level = 3
codegen-units = 1

[profile.release.package.molt-runtime-core]
opt-level = 3

[profile.release.package.molt-lang-obj-model]
opt-level = 3

[profile.release.package.molt-runtime-collections]
opt-level = 3
