[workspace]
members = [
    "runtime/molt-runtime",
    "runtime/molt-runtime-collections",
    "runtime/molt-runtime-itertools",
    "runtime/molt-runtime-crypto",
    "runtime/molt-runtime-compression",
    "runtime/molt-runtime-path",
    "runtime/molt-runtime-tk",
    "runtime/molt-obj-model",
    "runtime/molt-backend",
    "runtime/molt-db",
    "runtime/molt-worker",
    "runtime/molt-wasm-host",
    "runtime/molt-snapshot",
    "runtime/molt-embed",
    "runtime/molt-harness",
    "runtime/molt-runtime-protobuf",
    "runtime/molt-ffi",
    "runtime/molt-tier",
    "runtime/molt-gpu",
]
exclude = [
    "deploy/browser/simd-ops-rs",
    # molt-backend-mlir requires system LLVM 22 (mlir-sys). Excluded from
    # default workspace to prevent cargo check --all failures on machines
    # without LLVM installed. Build explicitly with:
    #   cargo check -p molt-backend-mlir
    "runtime/molt-backend-mlir",
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
# panic = "unwind" is required for the backend's catch_unwind retry
# mechanism (handles Cranelift optimizer panics gracefully).
# panic = "abort" broke this entirely — catch_unwind was a no-op.
panic = "unwind"
strip = "symbols"
debug = 1

# Dev per-package overrides: opt-level 1 for hot compilation dependencies
# so that the backend and Cranelift pipeline are not painfully slow even in
# debug builds. debug = 0 on large transitive deps to cut link time and
# artifact size.
[profile.dev.package.molt-backend]
opt-level = 1
debug = 0

[profile.dev.package.cranelift-codegen]
opt-level = 1
debug = 0

[profile.dev.package.regalloc2]
opt-level = 1
debug = 0

[profile.dev.package.cranelift-frontend]
debug = 0

[profile.dev.package.cranelift-module]
debug = 0

[profile.dev.package.cranelift-native]
debug = 0

[profile.dev.package.cranelift-object]
debug = 0

[profile.dev.package.gimli]
debug = 0

[profile.dev.package.object]
debug = 0

# Runtime at opt-level 2 even in dev: this code runs inside compiled
# output, so a sluggish runtime masks the actual perf of user programs.
[profile.dev.package.molt-runtime]
opt-level = 2
debug = 0

[profile.dev.package.aws-lc-rs]
debug = 0

[profile.dev.package.aws-lc-sys]
debug = 0

[profile.dev.package.httparse]
debug = 0

[profile.dev.package.libbz2-rs-sys]
debug = 0

[profile.dev.package.rustpython-parser]
debug = 0

[profile.dev.package.rustpython-ast]
debug = 0

[profile.dev.package.rustpython-parser-core]
debug = 0

[profile.dev.package.rustls]
debug = 0

[profile.dev.package.rustls-pemfile]
debug = 0

[profile.dev.package.rustls-webpki]
debug = 0

[profile.dev.package.serde]
debug = 0

[profile.dev.package.serde_core]
debug = 0

[profile.dev.package.serde_json]
debug = 0

[profile.dev.package.simdutf]
debug = 0

[profile.dev.package.thiserror]
debug = 0

[profile.dev.package.tungstenite]
debug = 0

[profile.dev.package.webpki-roots]
debug = 0

[profile.dev.package.zlib-rs]
debug = 0

[profile.dev.package.proc-macro2]
debug = 0

[profile.dev.package.quote]
debug = 0

[profile.dev.package.syn]
debug = 0

[profile.dev.package.unicode_names2]
debug = 0

[profile.dev.package.url]
debug = 0

[profile.dev.package.xz2]
debug = 0

[profile.dev.package.lzma-sys]
debug = 0

[profile.dev.package.zip]
debug = 0

[profile.dev-fast]
inherits = "dev"
debug = 1
codegen-units = 256
lto = "off"

[profile.dev-fast.package.molt-backend]
opt-level = 1
debug = 0

[profile.dev-fast.package.cranelift-codegen]
opt-level = 1
debug = 0

[profile.dev-fast.package.regalloc2]
opt-level = 1
debug = 0

[profile.dev-fast.package.cranelift-frontend]
debug = 0

[profile.dev-fast.package.cranelift-module]
debug = 0

[profile.dev-fast.package.cranelift-native]
debug = 0

[profile.dev-fast.package.cranelift-object]
debug = 0

[profile.dev-fast.package.gimli]
debug = 0

[profile.dev-fast.package.object]
debug = 0

# Runtime at opt-level 2 even in dev-fast: same rationale as dev profile.
[profile.dev-fast.package.molt-runtime]
opt-level = 2
debug = 0

[profile.dev-fast.package.aws-lc-rs]
debug = 0

[profile.dev-fast.package.aws-lc-sys]
debug = 0

[profile.dev-fast.package.httparse]
debug = 0

[profile.dev-fast.package.libbz2-rs-sys]
debug = 0

[profile.dev-fast.package.rustpython-parser]
debug = 0

[profile.dev-fast.package.rustpython-ast]
debug = 0

[profile.dev-fast.package.rustpython-parser-core]
debug = 0

[profile.dev-fast.package.rustls]
debug = 0

[profile.dev-fast.package.rustls-pemfile]
debug = 0

[profile.dev-fast.package.rustls-webpki]
debug = 0

[profile.dev-fast.package.serde]
debug = 0

[profile.dev-fast.package.serde_core]
debug = 0

[profile.dev-fast.package.serde_json]
debug = 0

[profile.dev-fast.package.simdutf]
debug = 0

[profile.dev-fast.package.thiserror]
debug = 0

[profile.dev-fast.package.tungstenite]
debug = 0

[profile.dev-fast.package.webpki-roots]
debug = 0

[profile.dev-fast.package.zlib-rs]
debug = 0

[profile.dev-fast.package.proc-macro2]
debug = 0

[profile.dev-fast.package.quote]
debug = 0

[profile.dev-fast.package.syn]
debug = 0

[profile.dev-fast.package.unicode_names2]
debug = 0

[profile.dev-fast.package.url]
debug = 0

[profile.dev-fast.package.xz2]
debug = 0

[profile.dev-fast.package.lzma-sys]
debug = 0

[profile.dev-fast.package.zip]
debug = 0

# Fast iteration profile: O3 with single codegen unit and fat LTO for
# maximum cross-crate inlining and optimization. The daemon binary is
# built infrequently, so the extra LTO link time (~30-60s) is acceptable
# for the codegen quality win (fat LTO enables interprocedural
# optimizations across crate boundaries that thin LTO cannot perform).
# panic = "unwind" required — see [profile.release] comment above.
[profile.release-fast]
inherits = "release"
opt-level = 3          # O3: auto-vectorization + aggressive inlining for daemon hot paths
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "unwind"       # required for catch_unwind in Cranelift retry path

# Hot-path dependency overrides for release-fast: ensure the register
# allocator and codegen core are maximally optimized even if the overall
# profile inherits a different default.  These crates dominate compile-time
# CPU in Cranelift's pipeline and benefit most from O3 auto-vectorization.
[profile.release-fast.package.cranelift-codegen]
opt-level = 3

[profile.release-fast.package.regalloc2]
opt-level = 3

# Output-binary profile: used when building the runtime staticlib that gets
# linked into user output binaries. Key differences from release-fast:
#
# panic = "abort"    — output binaries do not need the backend's catch_unwind
#                      retry mechanism. Eliminates ~750KB of exception tables.
# opt-level "z"      — minimises code size; user hot paths are in compiled
#                      Python code (optimized by Cranelift), not runtime glue.
# lto = "thin"       — cross-crate optimization without LLVM bitcode overhead.
#                      Fat LTO with codegen-units=1 produces a single monolithic
#                      object file that the system linker cannot split, defeating
#                      -dead_strip / --gc-sections entirely.
# codegen-units = 16 — splits the runtime into multiple object files so the
#                      linker only pulls in objects containing referenced symbols.
#                      Combined with -dead_strip, this enables function-level
#                      dead code elimination across the runtime.
[profile.release-output]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true

# Size-optimized release profile for micro stdlib builds.
# Uses opt-level "z" (minimize binary size) with fat LTO and single codegen
# unit for maximum cross-crate inlining and dead code elimination.
[profile.release-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true

# WASM-optimized release profile: fat LTO with single codegen unit for
# maximum cross-crate inlining and dead code elimination. Build time
# increases but runtime wasm artifacts are cached and infrequently rebuilt.
[profile.wasm-release]
inherits = "release"
opt-level = "z"  # minimize binary size for Cloudflare Workers 3MB limit
lto = "fat"
codegen-units = 1
panic = "abort"  # WASM doesn't use catch_unwind; unwind tables are pure bloat
strip = true

[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 4
debug = 1
strip = "none"  # keep symbols for dev-release debugging

[profile.dev-release.package.cranelift-codegen]
opt-level = 3

[profile.dev-release.package.regalloc2]
opt-level = 3

# Hot-path dependency overrides for base release: ensure the register
# allocator and codegen core are maximally optimized. These crates
# dominate compile-time CPU in Cranelift's pipeline and benefit most
# from O3 auto-vectorization.
[profile.release.package.cranelift-codegen]
opt-level = 3

[profile.release.package.regalloc2]
opt-level = 3

# Optimize runtime crates — statically linked into output binaries.
# Runtime packages: opt-level 3 for maximum native performance.
# The WASM/size-optimized builds use profile.wasm-release (opt="z").
# These are the hot-path functions called millions of times — every
# bit of inlining, vectorization, and scheduling matters.
[profile.release.package.molt-runtime]
opt-level = 3
codegen-units = 1

[profile.release.package.molt-runtime-core]
opt-level = 3

[profile.release.package.molt-lang-obj-model]
opt-level = 3

[profile.release.package.molt-runtime-collections]
opt-level = 3
