[workspace]
members = [
    "runtime/molt-runtime",
    "runtime/molt-runtime-collections",
    "runtime/molt-runtime-itertools",
    "runtime/molt-runtime-crypto",
    "runtime/molt-runtime-compression",
    "runtime/molt-runtime-path",
    "runtime/molt-runtime-tk",
    "runtime/molt-obj-model",
    "runtime/molt-backend",
    "runtime/molt-backend-luau",
    "runtime/molt-backend-rust",
    "runtime/molt-backend-wasm",
    "runtime/molt-db",
    "runtime/molt-worker",
    "runtime/molt-wasm-host",
    "runtime/molt-snapshot",
    "runtime/molt-embed",
    "runtime/molt-harness",
    "runtime/molt-runtime-protobuf",
    "runtime/molt-ffi",
    "runtime/molt-tier",
    "runtime/molt-gpu",
    "runtime/molt-ir",
    "runtime/molt-passes",
    "runtime/molt-tir",
    "runtime/molt-codegen-abi",
]
exclude = [
    "deploy/browser/simd-ops-rs",
    # molt-backend-mlir requires system LLVM 22 (mlir-sys). Excluded from
    # default workspace to prevent cargo check --all failures on machines
    # without LLVM installed. Build explicitly with:
    #   cargo check -p molt-backend-mlir
    "runtime/molt-backend-mlir",
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
# panic = "unwind" is required for the backend's catch_unwind retry
# mechanism (handles Cranelift optimizer panics gracefully).
# panic = "abort" broke this entirely — catch_unwind was a no-op.
panic = "unwind"
strip = "symbols"
debug = 1

# Dev per-package overrides: opt-level 1 for hot compilation dependencies
# so that the backend and Cranelift pipeline are not painfully slow even in
# debug builds. debug = 0 on large transitive deps to cut link time and
# artifact size.
[profile.dev.package.molt-backend]
opt-level = 1
debug = 0

[profile.dev.package.molt-backend-luau]
opt-level = 1
debug = 0

[profile.dev.package.molt-backend-rust]
opt-level = 1
debug = 0

[profile.dev.package.cranelift-codegen]
opt-level = 1
debug = 0

[profile.dev.package.regalloc2]
opt-level = 1
debug = 0

[profile.dev.package.cranelift-frontend]
debug = 0

[profile.dev.package.cranelift-module]
debug = 0

[profile.dev.package.cranelift-native]
debug = 0

[profile.dev.package.cranelift-object]
debug = 0

[profile.dev.package.gimli]
debug = 0

[profile.dev.package.object]
debug = 0

# Runtime at opt-level 2 even in dev: this code runs inside compiled
# output, so a sluggish runtime masks the actual perf of user programs.
[profile.dev.package.molt-runtime]
opt-level = 2
debug = 0

[profile.dev.package.aws-lc-rs]
debug = 0

[profile.dev.package.aws-lc-sys]
debug = 0

[profile.dev.package.httparse]
debug = 0

[profile.dev.package.libbz2-rs-sys]
debug = 0

[profile.dev.package.rustpython-parser]
debug = 0

[profile.dev.package.rustpython-ast]
debug = 0

[profile.dev.package.rustpython-parser-core]
debug = 0

[profile.dev.package.rustls]
debug = 0

[profile.dev.package.rustls-pemfile]
debug = 0

[profile.dev.package.rustls-webpki]
debug = 0

[profile.dev.package.serde]
debug = 0

[profile.dev.package.serde_core]
debug = 0

[profile.dev.package.serde_json]
debug = 0

[profile.dev.package.simdutf]
debug = 0

[profile.dev.package.thiserror]
debug = 0

[profile.dev.package.tungstenite]
debug = 0

[profile.dev.package.webpki-roots]
debug = 0

[profile.dev.package.zlib-rs]
debug = 0

[profile.dev.package.proc-macro2]
debug = 0

[profile.dev.package.quote]
debug = 0

[profile.dev.package.syn]
debug = 0

[profile.dev.package.unicode_names2]
debug = 0

[profile.dev.package.url]
debug = 0

[profile.dev.package.xz2]
debug = 0

[profile.dev.package.lzma-sys]
debug = 0

[profile.dev.package.zip]
debug = 0

[profile.dev-fast]
inherits = "dev"
debug = 1
codegen-units = 256
lto = "off"

[profile.dev-fast.package.molt-backend]
opt-level = 1
debug = 0

[profile.dev-fast.package.molt-backend-luau]
opt-level = 1
debug = 0

[profile.dev-fast.package.molt-backend-rust]
opt-level = 1
debug = 0

[profile.dev-fast.package.cranelift-codegen]
opt-level = 1
debug = 0

[profile.dev-fast.package.regalloc2]
opt-level = 1
debug = 0

[profile.dev-fast.package.cranelift-frontend]
debug = 0

[profile.dev-fast.package.cranelift-module]
debug = 0

[profile.dev-fast.package.cranelift-native]
debug = 0

[profile.dev-fast.package.cranelift-object]
debug = 0

[profile.dev-fast.package.gimli]
debug = 0

[profile.dev-fast.package.object]
debug = 0

# Runtime at opt-level 2 even in dev-fast: same rationale as dev profile.
[profile.dev-fast.package.molt-runtime]
opt-level = 2
debug = 0

[profile.dev-fast.package.aws-lc-rs]
debug = 0

[profile.dev-fast.package.aws-lc-sys]
debug = 0

[profile.dev-fast.package.httparse]
debug = 0

[profile.dev-fast.package.libbz2-rs-sys]
debug = 0

[profile.dev-fast.package.rustpython-parser]
debug = 0

[profile.dev-fast.package.rustpython-ast]
debug = 0

[profile.dev-fast.package.rustpython-parser-core]
debug = 0

[profile.dev-fast.package.rustls]
debug = 0

[profile.dev-fast.package.rustls-pemfile]
debug = 0

[profile.dev-fast.package.rustls-webpki]
debug = 0

[profile.dev-fast.package.serde]
debug = 0

[profile.dev-fast.package.serde_core]
debug = 0

[profile.dev-fast.package.serde_json]
debug = 0

[profile.dev-fast.package.simdutf]
debug = 0

[profile.dev-fast.package.thiserror]
debug = 0

[profile.dev-fast.package.tungstenite]
debug = 0

[profile.dev-fast.package.webpki-roots]
debug = 0

[profile.dev-fast.package.zlib-rs]
debug = 0

[profile.dev-fast.package.proc-macro2]
debug = 0

[profile.dev-fast.package.quote]
debug = 0

[profile.dev-fast.package.syn]
debug = 0

[profile.dev-fast.package.unicode_names2]
debug = 0

[profile.dev-fast.package.url]
debug = 0

[profile.dev-fast.package.xz2]
debug = 0

[profile.dev-fast.package.lzma-sys]
debug = 0

[profile.dev-fast.package.zip]
debug = 0

# Fast-ITERATION profile for the backend DAEMON (the molt compiler itself), NOT a
# ship profile. The shipped user-binary runtime staticlib is built with
# `release-output` (fat LTO, opt-z) and WASM with `wasm-release`; this profile
# only ever builds the daemon-compiler's own code, which runs as a compiler — its
# internal codegen quality has no bearing on USER-program runtime perf. So we
# optimize this profile purely for the edit->rebuild->test iteration loop.
#
# lto = "thin" (was "fat" until measured 2026-06-05): the daemon bin's LTO is THE
# build long pole. Fat LTO re-merges the whole dependency closure (lib + cranelift)
# into ONE module and re-optimizes it serially, defeating the cgu=256 parallelism
# in the LTO phase. Thin LTO performs cross-module inlining via per-module summaries
# and keeps codegen parallel across cores through LTO. MEASURED on this repo
# (M5 Max, touch a molt-backend lib source -> rebuild daemon):
#   fat LTO : ~137 s  (median of 132/142)
#   thin LTO:  ~81 s  (median of 73/90)   -> ~41% / ~56 s faster PER EDIT.
# Zero user-binary runtime-perf risk: release-fast never builds the shipped runtime
# (that is release-output, untouched). Verified byte-identical compiled-program
# output + full lib suite + compliance after the switch.
# panic = "unwind" required — see [profile.release] comment above.
[profile.release-fast]
inherits = "release"
opt-level = 3          # O3: auto-vectorization + aggressive inlining for daemon hot paths
lto = "thin"
# codegen-units: under THIN LTO the per-module summaries let all cgus stay parallel
# through the LTO phase (unlike fat LTO, which collapses them into one serial merge).
# release-fast is a build-ITERATION profile (the backend daemon + runtime staging),
# not a ship profile — the shipping native runtime is built with release-output and
# WASM with wasm-release, both of which keep codegen-units=1. A high cgu here
# parallelizes the incremental recompile of the 342k-LoC molt-runtime hub (cgu=1
# serialized it into a ~72s one-line-edit rebuild; cgu=256 parallelizes across cores)
# AND, with thin LTO, parallelizes the daemon-bin LTO itself.
codegen-units = 256
strip = "symbols"
panic = "unwind"       # required for catch_unwind in Cranelift retry path

# Hot-path dependency overrides for release-fast: ensure the register
# allocator and codegen core are maximally optimized even if the overall
# profile inherits a different default.  These crates dominate compile-time
# CPU in Cranelift's pipeline and benefit most from O3 auto-vectorization.
[profile.release-fast.package.cranelift-codegen]
opt-level = 3

[profile.release-fast.package.regalloc2]
opt-level = 3

# Override the inherited [profile.release.package.molt-runtime] codegen-units = 1
# for the build-iteration profile. Without this explicit override, release-fast
# would inherit the ship-tuned cgu=1 from the base release profile and serialize
# the 342k-LoC hub's codegen into a single unit (~72s for a one-line edit). Under
# fat LTO the cgu count does not change final perf (whole-program re-merge), so
# raising it is a pure incremental-rebuild win. opt-level stays 3 to match the
# release-fast intent (the daemon-adjacent runtime staging should be optimized).
# The SHIPPING runtime staticlib is built with release-output (cgu=1, untouched),
# so this does NOT regress shipped runtime performance.
[profile.release-fast.package.molt-runtime]
opt-level = 3
codegen-units = 256

# Output-binary profile: used when building the runtime staticlib that gets
# linked into user output binaries. Key differences from release-fast:
#
# panic = "abort"    — eliminates ~800KB of exception handling tables
#                      (__eh_frame + __gcc_except_tab + __unwind_info).
#                      Safe because under panic="abort" NO FFI entry point
#                      compiles a catch_unwind: the catching GIL-entry macros
#                      (with_gil_entry! / with_core_gil!) and the explicitly
#                      panic-free with_gil_entry_nopanic! all expand, via the
#                      single cfg(panic=...) dispatch in
#                      molt-runtime-core::with_gil_entry_body!, to the bare body
#                      under this profile (the catch_unwind branch is
#                      cfg-eliminated; verified: 0 __rust_try symbols in the
#                      release-output rlibs). Every FFI body propagates all
#                      Python-level errors explicitly (pending exception +
#                      sentinel return) and never relies on a panic to surface a
#                      recoverable Python error, so the only reachable panic is a
#                      runtime invariant violation (poisoned lock, corrupted
#                      allocator, unreachable branch) for which process abort is
#                      the correct fail-closed behavior — never a recoverable
#                      Python exception. Under panic="unwind" (dev / dev-fast /
#                      release-fast, used by tests + CI) the same macros keep
#                      catch_unwind as a defense-in-depth net.
# opt-level "z"      — minimises code size; user hot paths are in compiled
#                      Python code (optimized by Cranelift), not runtime glue.
# lto = "fat"        — fat LTO + codegen-units=1 produces a single object file
#                      with SUBSECTIONS_VIA_SYMBOLS set (macOS) or
#                      -ffunction-sections (Linux), enabling the system linker
#                      to strip individual functions via -dead_strip /
#                      --gc-sections even within that single object.
# codegen-units = 1  — maximum cross-crate inlining and dead code elimination
#                      during the LTO pass. The system linker handles the
#                      remaining function-level stripping.
[profile.release-output]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Size-optimized release profile for micro stdlib builds.
# Uses opt-level "z" (minimize binary size) at profile scope with fat LTO and a
# single codegen unit for maximum cross-crate inlining and dead code
# elimination. The four hot runtime crates are re-asserted to opt-"s" below
# (see the hot-crate opt-level policy block) so they do not silently ride at the
# opt-3 inherited from `release`.
#
# panic = "abort" (matches `release-output`): the cfg(panic) FFI-boundary
# unification landed in 242595bc1 ("unify FFI panic boundary under cfg(panic)"),
# which was the gate this comment previously waited on. Adversarial re-diagnosis
# there established that the ~1121 catching `with_gil_entry!`/`with_core_gil!`
# stdlib FFI sites (`runtime/molt-runtime/src/concurrency/mod.rs`,
# `runtime/molt-runtime-core/src/lib.rs`) do NOT rely on catch_unwind to surface
# Python-level errors: every Python error is propagated explicitly (raise_exception
# + sentinel, checked_* arithmetic, guarded div/mod, bounds checks). catch_unwind
# only ever caught TRUE Rust invariant violations (mutex poison, callback faults),
# where process-abort is the correct fail-closed behavior — not a CPython parity
# divergence. Under `panic = "abort"` the shared `with_gil_entry_body!` macro's
# catch arm is cfg-eliminated before codegen, so the ~1121 FFI sites emit no catch
# landing pads — the catch-arm unwind-table bloat panic #8 measured as -1.7MB
# across the runtime rlibs (serial -639KB/16.7%, math -396KB/23%), pure waste on a
# SIZE profile. (The native staticlib still bundles std's prebuilt unwind
# personality, present in EVERY abort build — release-size carries fewer such
# residue symbols than the shipping release-output abort baseline.) `release-output`
# already ships this exact native FFI boundary under abort; `release-size` is the
# same FFI boundary (the catch-arm cfg in `with_gil_entry_body!` is keyed on
# `panic` alone, independent of opt-level / LTO), so the same proof applies — the
# abort boundary is gate-verified for `release-output` (native) and `wasm-release`
# (wasm). Do NOT revert to unwind — that re-inflates the size profile with dead
# unwind tables for zero correctness gain.
[profile.release-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# WASM-optimized release profile: fat LTO with single codegen unit for
# maximum cross-crate inlining and dead code elimination. Build time
# increases but runtime wasm artifacts are cached and infrequently rebuilt.
# NOTE: the profile-scope opt-level="z" below governs bulk stdlib crates only;
# the four hot runtime crates are re-asserted to opt-"s" in the hot-crate
# opt-level policy block (they would otherwise inherit opt-3 from `release` and
# inflate the shipped runtime by ~1.65 MB / 25.5%, measured).
[profile.wasm-release]
inherits = "release"
opt-level = "z"  # minimize binary size for Cloudflare Workers 3MB limit
lto = "fat"
codegen-units = 1
panic = "abort"  # WASM doesn't use catch_unwind; unwind tables are pure bloat
strip = true

[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 4
debug = 1
strip = "none"  # keep symbols for dev-release debugging

[profile.dev-release.package.cranelift-codegen]
opt-level = 3

[profile.dev-release.package.regalloc2]
opt-level = 3

# Hot-path dependency overrides for base release: ensure the register
# allocator and codegen core are maximally optimized. These crates
# dominate compile-time CPU in Cranelift's pipeline and benefit most
# from O3 auto-vectorization.
[profile.release.package.cranelift-codegen]
opt-level = 3

[profile.release.package.regalloc2]
opt-level = 3

# ── Hot runtime crate opt-level policy (per profile family) ──────────────────
#
# IMPORTANT inheritance fact (verified with `cargo build -v`): Cargo per-package
# overrides set on a *parent* profile ARE inherited by child profiles via
# `inherits` unless the child re-declares the same `[profile.<child>.package.X]`
# table. So the opt-level=3 hot-crate overrides below propagate from `release`
# into every `inherits = "release"` child — including the *size* profiles
# (`release-size`, `wasm-release`). That is correct for the speed profiles
# (`release`, `release-fast`, `release-output`, `dev-release`) but WRONG for the
# size profiles: it silently lifted the hot crates to opt-3 there, defeating the
# size profiles' stated goal.
#
# Measured effect on the shipped wasm runtime cdylib (strip + wasm-opt -Oz):
#   opt-3 hot crates (old, leaked): 6,809,756 bytes
#   opt-s hot crates (re-asserted):  5,075,011 bytes  → 1.65 MB (25.5%) smaller
# (opt-"s" and opt-"z" produced byte-identical wasm here; "s" is chosen to keep
#  speed-leaning optimizations for the perf-vs-CPython contract at no size cost.)
#
# So: the SPEED profiles keep the hot crates at opt-3 (below); the SIZE profiles
# re-assert opt-"s" on the same crates (further below). Bulk stdlib crates stay
# at each profile's own opt-level (3 for speed, "z" for size) via the default.

# Speed profiles (release / release-fast / release-output / dev-release): the
# hot-path object-model + arith + container functions are called millions of
# times — every bit of inlining, vectorization, and scheduling matters, so
# opt-3 even though the surrounding profile may select a smaller default
# (release-output is opt-"z" at profile scope; these overrides keep the hot
# crates at 3, verified shipping at opt-3 via `cargo build -v`).
[profile.release.package.molt-runtime]
opt-level = 3
codegen-units = 1

[profile.release.package.molt-runtime-core]
opt-level = 3

[profile.release.package.molt-lang-obj-model]
opt-level = 3

[profile.release.package.molt-runtime-collections]
opt-level = 3

# Size profiles (release-size / wasm-release): re-assert opt-"s" on the four hot
# runtime crates, overriding the opt-3 inherited from `release` above. "s"
# (optimize for size, retaining cheap speed wins) gives the full 25.5% wasm size
# reduction measured above while protecting the faster-than-CPython contract
# better than "z" would. codegen-units=1 is preserved for cross-crate DCE.
[profile.release-size.package.molt-runtime]
opt-level = "s"
codegen-units = 1

[profile.release-size.package.molt-runtime-core]
opt-level = "s"

[profile.release-size.package.molt-lang-obj-model]
opt-level = "s"

[profile.release-size.package.molt-runtime-collections]
opt-level = "s"

[profile.wasm-release.package.molt-runtime]
opt-level = "s"
codegen-units = 1

[profile.wasm-release.package.molt-runtime-core]
opt-level = "s"

[profile.wasm-release.package.molt-lang-obj-model]
opt-level = "s"

[profile.wasm-release.package.molt-runtime-collections]
opt-level = "s"

# Fallback profile for the wasm runtime recovery path (cli.py
# MOLT_WASM_RUNTIME_FALLBACK_PROFILE). It MUST preserve wasm-release's size +
# panic contract (opt size, panic=abort, strip) — switching the fallback to
# `release-fast` (opt-3, panic=unwind) re-introduced unwind tables and inflated
# the artifact past the 3MB Cloudflare ceiling. The ONLY differences from
# wasm-release are the codegen knobs that change to escape the fat-LTO single-CGU
# corruption class a fallback is recovering from: thin LTO + 16 codegen units,
# applied to ALL crates including the hot ones (the hot crates would otherwise
# keep codegen-units=1 from the inherited `release` package override and so be
# exempt from the very relaxation the fallback exists to apply). Same opt-"s"
# hot-crate re-assertion as wasm-release so size stays bounded.
[profile.wasm-release-fallback]
inherits = "wasm-release"
lto = "thin"
codegen-units = 16

[profile.wasm-release-fallback.package.molt-runtime]
opt-level = "s"
codegen-units = 16

[profile.wasm-release-fallback.package.molt-runtime-core]
opt-level = "s"
codegen-units = 16

[profile.wasm-release-fallback.package.molt-lang-obj-model]
opt-level = "s"
codegen-units = 16

[profile.wasm-release-fallback.package.molt-runtime-collections]
opt-level = "s"
codegen-units = 16
