[project]
name = "molt"
version = "0.0.001"
description = "Molt: A verified subset Python to native/WASM compiler."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12, <3.15"
dependencies = [
    "click>=8.3.1",
    "packaging>=26.0",
    "PyYAML>=6.0.3",
    "rich>=14.3.3",
    "ty>=0.0.20",
]

[project.scripts]
molt = "molt.cli:main"
molt-orchestration = "molt.orchestration_removed.__main__:main"

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["third_party", "tests/differential"]

[tool.ruff.lint.per-file-ignores]
"src/molt/stdlib/**/*.py" = ["E402"]
"src/molt/stdlib/colorsys.py" = ["E741"]
"src/molt/stdlib/copyreg.py" = ["F401"]
"src/molt/stdlib/ctypes/_endian.py" = ["F821"]
"src/molt/stdlib/ctypes/wintypes.py" = ["F821"]
"src/molt/stdlib/email/quoprimime.py" = ["F401"]
"src/molt/stdlib/encodings/mac_arabic.py" = ["F601"]
"src/molt/stdlib/encodings/punycode.py" = ["E741"]
"src/molt/stdlib/encodings/quopri_codec.py" = ["F401"]
"src/molt/stdlib/http/client.py" = ["F822"]

[tool.ty.src]
exclude = ["src/molt/stdlib/**", "stdlib/**", "tests/differential/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--ignore=tests/differential",
    "--ignore=tests/molt_only",
    "--ignore=tests/compliance",
]
norecursedirs = ["third_party", ".git", ".venv", "dist", "build", "logs"]

[tool.molt.deps]
tier_a = ["attrs", "click", "pydantic", "requests", "rich", "ty"]
tier_b = ["orjson", "pydantic-core", "polars", "pyarrow", "ruff"]
tier_c = ["numpy", "pandas", "scipy", "tensorflow", "torch"]
native_wheels = ["cbor2", "cryptography", "msgpack"]


[dependency-groups]
bench = [
    "setuptools>=82.0.0",
]
dev = [
    "cbor2>=5.8.0",
    "dspy-ai>=3.0.3",
    "msgpack>=1.1.2",
    "pydantic>=2.12.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
    "setuptools>=82.0.0",
    "django>=6.0.3",
    "filelock>=3.25.0",
    "virtualenv>=21.1.0",
    "pip>=26.0.1",
    "stdlib-list>=0.12.0",
    "coverage>=7.13.4",
    "pip-audit>=2.10.0",
    "py-spy>=0.4.1",
    "duckdb>=1.4.4",
    "pyarrow>=23.0.1",
]
demo = [
    "django>=6.0.3",
    "gunicorn>=25.1.0",
    "msgpack>=1.1.2",
    "uvicorn>=0.41.0",
]

[tool.setuptools]
packages = {find = {where = ["src"], exclude = ["tests*"]}}

[project.optional-dependencies]
accel = [
    "msgpack>=1.0.0",
]

[tool.setuptools.package-data]
"molt_accel" = ["py.typed", "default_exports.json"]
"molt.orchestration_removed" = [
    "dashboard_assets/*.html",
    "dashboard_assets/*.css",
    "dashboard_assets/*.js",
]
